--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Inter', sans-serif !important;
+  box-sizing: border-box;
+  line-height: 1.5;
+  background-color: rgba(183, 188, 245, 0.19) !important;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.ant-input-affix-wrapper {
+  width:35% !important;
+  border: none !important;
+  border-right: 1px  solid #405153 !important;
 }
