--- a/src/App.less
+++ b/src/App.less
@@ -1,2 +1,52 @@
-@import "~antd/dist/antd.less";
+@import '~antd/dist/antd.less';
 
+//@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
+body {
+  margin: 0;
+  font-family:  Kumbh Sans,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+  box-sizing: border-box;
+  line-height: 1.5;
+  background-color: rgba(169, 169, 169, 0.18);
+
+}
+
+.ant-input-affix-wrapper {
+  width:33% !important;
+  border: none !important;
+}
+.ant-input-affix-wrapper:focus, .ant-input-affix-wrapper-focused {
+  box-shadow: none !important;
+}
+
+.ant-card-meta-title{
+  font-weight: bold;
+  line-height: 1.25rem;
+  font-size: 17px;
+}
+.ant-card-meta-description{
+  font-weight: 500;
+  font-size: 17px;
+}
+.ant-card-extra a {
+  font-weight: 500;
+  color: rgb(89,100,224)!important;
+}
+
+.checkbox{
+  font-weight:bold;
+  position: relative;
+  margin-top:25px ;
+  margin-left: 10px;
+}
+.btn-search{
+  margin-left: 205px;
+  top:8px;
+  width: 140px;
+  height: 47px;
+  font-size: 17px;
+  border-radius: 5px;
+  text-align: center;
+  font-weight: bold;
+  padding: 5px;
+}
