--- a/src/App.less
+++ b/src/App.less
@@ -1,4 +1,4 @@
-@import '~antd/dist/antd.less';
+  @import '~antd/dist/antd.less';
 
 //@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
@@ -8,7 +8,6 @@ body {
   box-sizing: border-box;
   line-height: 1.5;
   background-color: rgba(169, 169, 169, 0.18);
-
 }
 
 .ant-input-affix-wrapper {
@@ -22,7 +21,8 @@ body {
 .ant-card-meta-title{
   font-weight: bold;
   line-height: 1.25rem;
-  font-size: 17px;
+  font-size: 19px;
+  //font-weight: bold;
 }
 .ant-card-meta-description{
   font-weight: 500;
@@ -49,4 +49,10 @@ body {
   text-align: center;
   font-weight: bold;
   padding: 5px;
+}
+.ant-switch-handle::before {
+  background-color:rgb(89,100,224)!important;
+}
+.ant-switch {
+  background-color:white !important;
 }
